klipper: ignore `application/x-openoffice-link`

When accessing data of this MIME type, LibreOffice will create a DdeLink
bookmark that the user did not ask for. The correct way to disable this
behavior is for the clipboard manager ignore the MIME type data for it.

BUG: 500903
FIXED-IN: 6.3.3